Mon Feb 16 14:05:54 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* d10v-tdep.c (d10v_extract_return_value): Wierd.  GCC wants to
 	return odd sized register quantities with only half of the first
 	register used!

	* config/d10v/tm-d10v.h (USE_STRUCT_CONVENTION): Use stack when
 	size > 8.

Mon Mar 30 16:42:12 1998  Jason Molenda  (crash@bugshack.cygnus.com)

	* rdi-share/Makefile.am, rdi-share/aclocal.m4,
	rdi-share/configure: New files.
	* rdi-share/configure.in:  Rewritten to be an autoconf input file.
	* rdi-share/Makefile.in, rdi-share/configure: Generated by 
	automake/autoconf.
	* rdi-share/dbg_hif.h, etherdrv.c, hostchan.c: Use autoconf tests
	to check environment.

Sun Mar 29 15:17:16 1998  Keith Seitz  <keiths@onions.cygnus.com>

	* tracepoint.c (trace_start_command): Set trace_running_p.
	(trace_stop_command): Clear trace_running_p.

Sat Mar 28 15:19:48 1998  Stan Shebs  <shebs@andros.cygnus.com>

	* NEWS: Update for 4.17 release.

Thu Mar 26 22:29:28 1998  Elena Zannoni  <ezannoni@kwikemart.cygnus.com>

        * tracepoint.c (trace_status_command): Recognize a boolean return
        value from the stub to indicate whether trace experiment is
        running.  Export this value as a global state variable
        (trace_running_p) for use by the GUI. (from Michael Snyder)
        (trace_pass_command) added call to modify_tracepoint_hook.

        * tracepoint.h export trace_running_p

start-sanitize-sky
Wed Mar 25 11:45:19 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* configure.in (sim-gpu2): Added target type checking to make
 	--with-sim-gpu2 option only valid for sky target.
	* configure: Regenerated.
end-sanitize-sky

Tue Mar 24 16:22:40 1998  Stu Grossman  <grossman@bhuna.cygnus.co.uk>

	* Makefile.in:  Derive SHELL from configure.
	* config/d10v/d10v.mt config/d30v/d30v.mt config/m32r/m32r.mt
	config/mn10200/mn10200.mt config/mn10300/mn10300.mt :  Remove -lm
	from SIM.  This prevents dependency checking of -lm (under NT